--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,4 +1,25 @@
+body {
+   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+   font-weight: 300;
+}
+
+article{
+	width: 60%;
+	margin: 20px auto;
+	padding: 20px;
+	background-color: #ededed;
+	border-radius: 5px;
+	text-align: center;
+}
+
+h1{
+	font-size: 5.9vw;
+	color: #0040ff;
+}
+
 .logo{
 	display: block;
-	width: 400px;
+	width: 50%;
+	margin: 20px auto;
 }
+
